hphp/hack/test/typecheck/T90699200.php.exp
File "T90699200.php", line 5, characters 8-25:
Invalid argument (Typing[4110])
  File "pseudofunctions.hhi", line 44, characters 29-33:
  Expected `arraykey` (variadic argument)
  File "T90699200.php", line 5, characters 8-25:
  But got `shape('key' => int)`
File "T90699200.php", line 7, characters 8-11:
Invalid argument (Typing[4110])
  File "pseudofunctions.hhi", line 44, characters 29-33:
  Expected `arraykey` (variadic argument)
  File "T90699200.php", line 7, characters 8-11:
  But got `bool`
File "T90699200.php", line 9, characters 9-29:
Invalid argument (Typing[4110])
  File "pseudofunctions.hhi", line 44, characters 29-33:
  Expected `arraykey` (variadic argument)
  File "T90699200.php", line 9, characters 26-29:
  But got `?string`
File "T90699200.php", line 11, characters 8-22:
Invalid argument (Typing[4110])
  File "pseudofunctions.hhi", line 44, characters 29-33:
  Expected `arraykey` (variadic argument)
  File "T90699200.php", line 11, characters 12-20:
  But got `Exception`
